--- a/src/wally.toml
+++ b/src/wally.toml
@@ -10,3 +10,4 @@ realm = "shared"
 Promise = "evaera/promise@^4"
 Timer = "sleitnick/timer@1.1.2"
 Signal = "sleitnick/signal@2.0.3"
+Janitor = "howmanysmall/janitor@1.18.3"
