--- a/src/wally.toml
+++ b/src/wally.toml
@@ -1,5 +1,5 @@
 [package]
-name = "breezy1214/Hitbox"
+name = "breezy1214/hitbox"
 description = "A flexible, efficient hitbox system for Roblox games that supports both server and client-side hit detection."
 version = "1.0.0"
 license = "MIT"
